--- a/src/styles/helixPiles.module.css
+++ b/src/styles/helixPiles.module.css
@@ -150,35 +150,36 @@
 
 .feature_container {
     width: 100%;
-    height: 700px;
+    height: 600px;
     position: relative;
     mix-blend-mode: darken;
     display: flex;
     flex-direction: column;
     align-items:center;
     transition: all 1s ease;
-    /* border: 10px solid green; */
+    /* border: 2px solid green; */
+    margin-bottom: 100px;
 }
 
 .feature_wrapper{
-    width: 80%;
+    width: 90%;
     margin-left: 10%;
     margin-right: 10%;
     height: 100%;
     position: relative;
     display: flex;
-    display: flex;
     flex-direction: column;
-    align-items:flex-start;
+    align-items:center;
+    justify-content: space-evenly;
     transition: all 1s ease;
     /* border: 3px solid blue; */
 }
 .feature_top{
-    width: 80%;
+    width: 100%;
     height: 100px;
     position: relative;
     display: flex;
-    gap: 5%;
+    gap: 1%;
     align-items: center;
     transition: all 1s ease;
     /* border: 3px solid red; */
@@ -260,14 +261,15 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     transition: all 1s ease;
-    /* border: 3px solid green; */
+    margin-bottom: 100px;
+    /* border: 2px solid green; */
 }
 
 .common_title{
-    width: 80%;
+    width: 88%;
     height: 110px;
     position: relative;
     background-color: #004D7B;
@@ -278,13 +280,12 @@
     word-wrap: break-word;
     display: flex;
     align-items: center;
-    padding-left: 40px;
-    border: 1px solid black;
+    padding-left: 2%;
     transition: all 1s ease;
 }
 
 .apply_background{
-    width: 80%;
+    width: 90%;
     height: 500px;
     display: flex;
     justify-content: center;
@@ -319,7 +320,7 @@
 }
 
 .build_background{
-    width: 80%;
+    width: 90%;
     height: 700px;
     display: flex;
     justify-content: center;
@@ -340,7 +341,7 @@
 }
 
 .plan_background{
-    width: 80%;
+    width: 90%;
     height: 1000px;
     display: flex;
     justify-content: center;
@@ -361,7 +362,7 @@
 }
 
 .explain_background{
-    width: 80%;
+    width: 90%;
     height: 800px;
     display: flex;
     position: relative;
@@ -417,7 +418,8 @@
     }
 
     .feature_container {
-        height: 400px;
+        height: 280px;
+        margin-bottom: 20px;
     }
 
     .feature_top{
@@ -440,13 +442,18 @@
     .feature_description {
         font-size: 10px;
     }
+    .common_container{
+        /* height: 300px; */
+        margin-bottom: 20px;
+    }
+
     .common_title{
         height: 60px;
         font-size: 20px;
     }
 
     .apply_background{
-        height: 300px;
+        height: 150px;
     }
 
     .apply_description {
@@ -454,7 +461,7 @@
     }
 
     .build_background{
-        height: 300px;
+        height: 200px;
     }
 
     .build_image{
@@ -462,10 +469,10 @@
     }
 
     .plan_background{
-        height: 500px;
+        height: 280px;
     }
     .explain_background{
-        height: 500px;
+        height: 280px;
     }
 
     .explain_image{
