--- a/src/styles/estimate.module.css
+++ b/src/styles/estimate.module.css
@@ -24,52 +24,62 @@
   .image {
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     background-image: url(/popup_img.svg);
     background-size: cover;
     background-position: center;
     filter: brightness(50%);
     transition: all 1s ease;
-  }
-
-  .text {
-    width: 80%;
-    height: 100px;
-    position: absolute;
-    font-size: 16px;
-    color: white;
-    font-family: 'Nanum Gothic';
-    font-weight: 400;
-    word-wrap: break-word;
-    transition: all 1s ease;
-    /* border: 1px solid beige; */
-    padding: 0% 2%  0% 2%;
+    z-index: -1;
   }
 
   .company_name {
     width: 40%;
+    height: 50px;
     color: white;
-    top: 45px;
-    position: absolute;
     font-size: 32px;
     font-family: 'Nanum Gothic';
     font-weight: 600;
-    word-wrap: break-word;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: all 1s ease;
-    /* border: 2px solid red; */
+    /* border: 2px solid yellow; */
     /* padding: 0% 5%  0% 5%; */
-    margin: 0% 5%  0% 5%;
+    margin-bottom: 10%;
   }
 
   .inquiry_text {
-    top: 134px;
-    position: absolute;
+    /* top: 134px; */
+    /* position: absolute; */
     color: white;
     font-size: 24px;
     font-family: 'Nanum Gothic';
     font-weight: 600;
-    word-wrap: break-word;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: all 1s ease;
-    /* border: 2px solid red; */
+    /* border: 2px solid green; */
+    margin-bottom: 10%;
+  }
+
+  .text {
+    width: 80%;
+    font-size: 16px;
+    color: white;
+    font-family: 'Nanum Gothic';
+    font-weight: 400;
+    /* word-wrap: break-word; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 1s ease;
+    /* border: 1px solid blue; */
+    margin-bottom: 25%;
+    /* padding: 0% 2%  0% 2%; */
   }
 
   .footer {
@@ -78,11 +88,12 @@
     position: absolute;
     bottom: 0px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     gap: 200px;
     background: rgba(0, 0, 0, 0.75);
     transition: all 1s ease;
+    /* border: 2px solid purple; */
   }
 
   .footer_content{
@@ -97,6 +108,7 @@
     width: 170px;
     height: 40px;
     color: white;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -105,6 +117,7 @@
     font-weight: 600;
     word-wrap: break-word;
     transition: all 1s ease;
+    /* border: 2px solid orange; */
   }
 
   .checkbox {
@@ -118,14 +131,15 @@
 
 
   .close_button {
-    width: 40px;
-    height: 41px;
+    width: 42px;
+    height: 42px;
     color: white;
     font-size: 20px;
     font-family: 'Nanum Gothic';
     font-weight: 600;
     word-wrap: break-word;
     transition: all 1s ease;
+    /* border: 1px solid blue; */
   }
 
 
@@ -162,23 +176,23 @@
       gap: 10px;
     }
     .footer_content {
-      width: 130px;
+      width: 140px;
     }
 
     .do_not_show {
-      width: 150px;
+      width: 110px;
       height: 20px;
       font-size: 12px;
     }
 
     .checkbox {
-      width: 15px;
-      height: 15px;
+      width: 20px;
+      height: 20px;
     }
 
     .close_button {
-      width: 20px;
-      height: 20px;
+      width: 25px;
+      height: 25px;
       font-size: 10px;
     }
 }
