--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -20,7 +20,7 @@
     text-decoration: none;
     padding: 0.5%;
     gap:1%;
-    border: 2px solid green;
+    /* border: 2px solid green; */
 }
 
 .logo_image{
@@ -30,7 +30,7 @@
     background-size: 100% 100%;
     background-position: center;
     transition: all 1s ease;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .logo_text {
@@ -42,7 +42,7 @@
     word-wrap: break-word;
     transition: all 1s ease; 
     padding-left: 2%;
-    border: 2px solid black;
+    /* border: 2px solid black; */
 }
 
 .spacer{
