--- a/src/styles/microPiles.module.css
+++ b/src/styles/microPiles.module.css
@@ -248,7 +248,7 @@
 
 .feature_image {
     width: 15%;
-    height: 20%; 
+    height: 15%; 
     padding: 10%;
     background-image: url(/micro_feature_img.svg);
     background-size: 100% 100%;
@@ -297,7 +297,7 @@
     /* border: 2px solid red; */
     display: flex;
     justify-content: space-between;
-    gap: 3%;
+    /* gap: 1%; */
 }
 
 .apply_description {
@@ -318,16 +318,16 @@
     width: 90%;
     display: flex;
     flex-direction: column;
-    padding-left: 30px;
+    padding-left: 40px;
     /* border: 2px solid red; */
 }
 .apply_image {
-    width: 40%;
+    width: 45%;
     height: 60%;
     position: relative;
     mix-blend-mode: darken;
     background-image: url(/micro_apply_img.svg);
-    background-size: 100% 100%;
+    background-size: 110% 105%;
     background-position: center;
     transition: all 1s ease;
     /* border: 3px solid blue; */
@@ -367,7 +367,7 @@
 
 .plan_image{
     width: 100%;
-    height: 80%;
+    height: 100%;
     background-image: url(/micro_plan_img.svg);
     background-size: 100% 100%;
     background-position: center;
@@ -377,31 +377,21 @@
 
 .explain_background{
     width: 80%;
-    height: 800px;
+    height: 600px;
     display: flex;
     position: relative;
     justify-content: center;
     transition: all 1s ease;
     /* border: 3px solid red; */
 }
-
-.explain_image_container{
-    /* width: 50%; */
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
-    transition: all 1s ease;
-    /* border: 2px solid gray; */
-    box-sizing: border-box;
-}
 .explain_image{
     width: 300px;
-    height: 400px;
+    height: 100%;
     background-size: 100% 100%;
     background-position: center;
     transition: all 1s ease;
     /* border: 2px solid red; */
+    margin: 0px 10px 0px 10px;
     box-sizing: border-box;
 }
 
