--- a/src/styles/estimate.module.css
+++ b/src/styles/estimate.module.css
@@ -84,13 +84,13 @@
 
   .footer {
     width: 100%;
-    height: 100px;
+    height: 50px;
     position: absolute;
     bottom: 0px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    gap: 200px;
+    gap: 180px;
     background: rgba(0, 0, 0, 0.75);
     transition: all 1s ease;
     /* border: 2px solid purple; */
@@ -113,7 +113,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 16px;
     font-family: 'Nanum Gothic';
     font-weight: 600;
     word-wrap: break-word;
@@ -135,11 +135,11 @@
     width: 42px;
     height: 42px;
     color: white;
-    font-size: 20px;
+    font-size: 16px;
     font-family: 'Nanum Gothic';
     font-weight: 600;
-    word-wrap: break-word;
     transition: all 1s ease;
+    margin-right: 25px;
     /* border: 1px solid blue; */
   }
 
