--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -11,6 +11,64 @@
     /* border: 2px solid violet; */
 }
 
+.banner{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid orange; */
+
+}
+
+.main_image {
+    height: 100%;
+    width: 100%;
+    top :0px;
+    position: absolute;
+    background-size: cover;
+    background-position: center;
+    transition: all 1s ease;
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    top :0px;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.60);
+    transition: all 1s ease;
+}
+
+.overlay_text{
+    position: absolute;
+    color: white;
+    font-size: 36px;
+    font-family: 'Nanum Gothic';
+    font-weight: 600;
+    text-align: center;
+    word-wrap: break-word;
+    transition: all 1s ease;
+    white-space: pre-line;
+}
+
+.side_bar_wrapper{
+    width: 50%;
+    position: absolute;
+    bottom: 15%;
+    display: flex;
+    justify-content: space-evenly;
+    /* border: 2px solid red; */
+}
+.side_bar_item{
+    width: 10%;
+    height: 10px;
+    border: 1px solid #EAEAEA;
+    border-radius: 20px;
+    transition: all 1s ease;
+}
 .main_container{
     display: flex;
     height: 1000px;
