--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -53,6 +53,35 @@
     transition: all 1s ease;
     white-space: pre-line;
 }
+.scroll_bar_wrapper{
+    width: 100%;
+    height: 50%;
+    bottom: 0%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 10px solid green; */
+}
+
+@keyframes moveUpDown {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(20px);
+    }
+  }
+
+  .scroll_item {
+    width: 10%;
+    height: 20%;
+    border-radius: 20px;
+    transition: all 1s ease;
+    background-position: center;
+    background-size: 100% 100%;
+    animation: moveUpDown 2s linear infinite;
+  }
 
 .side_bar_wrapper{
     width: 50%;
@@ -60,6 +89,7 @@
     bottom: 15%;
     display: flex;
     justify-content: space-evenly;
+    /* border: 2px solid red; */
 }
 
 .side_bar_item{
@@ -69,6 +99,7 @@
     border-radius: 20px;
     transition: all 1s ease;
 }
+
 .main_info_container{
     width: 100%;
     height: 100%;
@@ -79,6 +110,7 @@
     position: relative;
     /* border: 2px solid red; */
 }
+
 .main_info_title{
     text-align: center;
     color: #1C1C1C;
@@ -194,19 +226,33 @@
     position: relative;
     transition: all 1.5s ease;
     /* border: 2px solid red; */
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
 }
 
 .performance_text{
     text-align: center;
     color: #1C1C1C;
-    font-size: 30px;
+    font-size: 48px;
     font-family: 'Nanum Gothic';
     font-weight: 600;
     word-wrap: break-word;
     transition: all 1.5s ease;
     /* border: 2px solid green; */
-    margin: 60px 0px 60px 0px;
+    margin: 0px 0px -60px 0px;
+}
+.performance_text span{
+    color: #1A4CFD;
+}
+.item_container{
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    transition: all 1.5s ease;
+    /* border: 2px solid blue; */
 }
 
 .flex_container {
@@ -231,6 +277,13 @@
     /* border: 1px solid red; */
     /* padding: 0% 5% 0% 5%; */
   } 
+
+  .item_link{
+    width: 20%;
+    height: 80%;
+    /* border: 2px solid #003399; */
+    transition: all 1.5s ease;
+}
 
   @media (max-width: 480px) {
         .performance_text{
