--- a/src/styles/estimate.module.css
+++ b/src/styles/estimate.module.css
@@ -3,6 +3,7 @@
     height: 500px;
     position:  absolute; 
     background: white;
+    top: 3%;
     margin-left: 60%;
     display: block;
     z-index: 1;
@@ -100,10 +101,10 @@
   .footer_content{
     display: flex;
     width: 230px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     transition: all 1s ease;
-    /* border: 2px solid red; */
+    /*border: 2px solid red;*/
   }
 
   .do_not_show {
@@ -119,7 +120,7 @@
     font-weight: 600;
     word-wrap: break-word;
     transition: all 1s ease;
-    /* border: 2px solid orange; */
+    /*border: 2px solid orange;*/
   }
 
   .checkbox {
@@ -166,14 +167,18 @@
     .company_name {
       top: 10px;
       width: 140px;
-      font-size: 24px;
+      font-size: 20px;
     }
 
     .inquiry_text {
       top: 60px;
-      font-size: 16px;
+      font-size: 12px;
     }
-
+    .text{
+      width: auto;
+      height: auto;
+      font-size: 7px;
+    }
     .footer {
       height: 30px;
       gap: 10px;
@@ -183,14 +188,14 @@
     }
 
     .do_not_show {
-      width: 110px;
-      height: 20px;
-      font-size: 12px;
+      width: auto;
+      height: auto;
+      font-size: 10px;
     }
 
     .checkbox {
-      width: 20px;
-      height: 20px;
+      width: 12px;
+      height: 12px;
     }
 
     .close_button {
