--- a/src/styles/admin.module.css
+++ b/src/styles/admin.module.css
@@ -75,7 +75,7 @@
 
 .body{
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -86,7 +86,7 @@
 
 .form_wrapper {
     width: 65%;
-    height: 80vh;
+    height: 100vh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -124,14 +124,11 @@
 
 .form_container{
     width: 100%;
-    height: 65vh;
+    height: 85vh;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* border: 2px solid red; */
-    /* align-items: center; */
-    /* border: 2px solid red; */
 }
 
 .form_item{
@@ -141,6 +138,12 @@
     display: flex;
     align-items: center;
     border-top: 1px dotted gray;
+}
+
+.form_file_item{
+    width: 100%;
+    margin: 2% 8% 2% 2%;
+    /* border: 2px solid red; */
 }
 
 .form_item_title{
@@ -169,7 +172,6 @@
     padding: 0;
     align-items: center;
     margin: 2% 5% 2% 5%;
-    /* border: 2px solid red; */
 }
 
 .form_textarea{
