--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -206,7 +206,7 @@
     align-items: center;
     background-position: center;
     background-size: cover;
-    transition: transform 1s ease-in-out;
+    transition: all 1.5s ease;
 }
 .main_info_contents_title{
     text-align: center;
